syntax = "proto3";
import "google/protobuf/empty.proto";
import "internal/proto/common.proto";
import "services/customer/proto/customer.proto";
package pb;
option go_package = "./;pb";

message Booking {
    string id = 1;
    Customer customer = 2;
    Ticket going_ticket = 3;
    Ticket return_ticket = 4;
    string status = 5;
}

message Bookings {
    repeated Booking bookings = 1;
}

message BookingInput {
    string customer_id = 1;
    TicketInput going_ticket = 2;
    optional TicketInput return_ticket = 3;
    string status = 4;
}

message Ticket {
    string id = 1;
    string flight_id = 2;
    string passenger_license_id = 3;
    string passenger_name = 4;
    string passenger_email = 5;
    string seat_number = 6;
    string class = 7;
    string status = 8;
}

message TicketInput {
    string flight_id = 2;
    string passenger_license_id = 3;
    string passenger_name = 4;
    string passenger_email = 5;
    string seat_number = 6;
    string class = 7;
    string status = 8;
}

message Tickets {
    repeated Ticket tickets = 1;
}

service BookingService {
    rpc PostBooking (BookingInput) returns (Booking) {}
    rpc GetBooking (UUID) returns (Booking) {}
    rpc GetBookings (google.protobuf.Empty) returns (Bookings) {}

    rpc GetTicket (UUID) returns (Ticket) {}
    rpc GetTickets (google.protobuf.Empty) returns (Tickets) {}
}